--- a/previleges.html
+++ b/previleges.html
@@ -224,7 +224,7 @@
                                         </div>
                                     </div>
 
-                                    <form action="" class="needs-validation" novalidate method="post">
+                                    <form action="" class="needs-validation" novalidate method="post"onsubmit="return false">
 
 
                                         <!--roles dropdown-->
@@ -340,7 +340,8 @@
             </div>
         </div>
     </div>
-    <script src="mainjsfile.js"></script>
+    <script src="validationFunc.js"></script>
+        <script src="fillFunc.js"></script>
 </body>
 
 </html>
