--- a/users.html
+++ b/users.html
@@ -223,7 +223,7 @@
                                         </div>
                                     </div>
 
-                                    <form action="" class="needs-validation" novalidate method="post">
+                                    <form action="" class="needs-validation" novalidate method="post" onsubmit="return false">
 
 
                                         <!--employee names datalist-->
@@ -370,7 +370,8 @@
             </div>
         </div>
     </div>
-    <script src="mainjsfile.js"></script>
+    <script src="validationFunc.js"></script>
+    <script src="fillFunc.js"></script>
 </body>
 
 </html>
