--- a/customer payments.html
+++ b/customer payments.html
@@ -161,7 +161,7 @@
                     <table id="tableUsers" class="table table-striped table-hover ">
                         <thead class="table-dark text-start">
                             <tr>
-                                                               <th>Invoice No</th>
+                                <th>Invoice No</th>
                                 <th>Customer ID</th>
                                 <th>Payment Source</th>
                                 <th>Payment Method</th>
@@ -173,7 +173,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                                               <td></td>
+                                <td></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
@@ -226,7 +226,8 @@
                                     </div>
                                 </div>
 
-                                <form action="" class="needs-validation" novalidate method="post">
+                                <form action="" class="needs-validation" novalidate method="post"
+                                    onsubmit="return false">
 
 
                                     <!--customer id -->
@@ -328,29 +329,34 @@
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="labelNotes">Notes<span class="text-danger">
-                                                    *</span></span>
+                                                id="labelNotes">Notes</span>
                                             <textarea class="form-control" id="textareaNotes"></textarea>
                                         </div>
                                     </div>
-                            
 
 
-                            <!--create user and clear button-->
-                            <div class="row mt-5">
-                                <div class="col-6 text-start">
-                                    <button type="reset" id="buttonClear" value="Clear" class="btn btn-secondary"><i
-                                            class="fa-solid fa-eraser" style="color: #ffffff;"></i>
-                                        Clear</button>
-                                </div>
+                                    <!--create user and clear button-->
+                                    <div class="row mt-5">
+                                        <div class="col-4 text-start">
+                                            <button type="reset" id="buttonClear" value="Clear"
+                                                class="btn btn-secondary"><i class="fa-solid fa-eraser"
+                                                    style="color: #ffffff;"></i> Clear</button>
+                                        </div>
 
-                                <div class="col-6 text-start">
-                                    <button type="submit" id="buttonSubmit" value="Add Employee" class="btn btn-success"><i
-                                            class="fa-solid fa-user-plus" style="color: #ffffff;"></i> Add</button>
-
-                                </div>
+                                        <div class="col-4 text-start">
+                                            <button type="submit" id="buttonSubmit" value="" class="btn btn-warning">
+                                                <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                                                Update</button>
+                                        </div>
+                                        <div class="col-4 text-start">
+                                            <button type="submit" id="buttonSubmit" value="Add Employee"
+                                                class="btn btn-success" onclick="buttonEmployeeSubmit()"><i
+                                                    class="fa-solid fa-user-plus" style="color: #ffffff;"></i>
+                                                Add</button>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
-                            </form>
                         </div>
                     </div>
                 </div>
@@ -358,9 +364,9 @@
         </div>
     </div>
     </div>
-    </div>
-    
-    <script src="mainjsfile.js"></script>
+
+    <script src="validationFunc.js"></script>
+    <script src="fillFunc.js"></script>
 </body>
 
 </html>
