--- a/customers.html
+++ b/customers.html
@@ -240,7 +240,8 @@
                                         </div>
                                     </div>
 
-                                    <form action="" class="needs-validation" novalidate method="post">
+                                    <form action="" class="needs-validation" novalidate method="post"
+                                        onsubmit="return false">
 
 
                                         <!--first name -->
@@ -329,8 +330,8 @@
                                                     style="background-color:#343a40; color: #ffffff;"
                                                     id="labelDistrict">District<span class="text-danger">
                                                         *</span></span>
-                                                </select><select id="selectDistrict" class="form-select ">
-                                                    <option value="" disabled selected>Select District
+                                              <select id="selectDistrict" class="form-select " onchange="this.classList.add('is-valid');">
+                                                    <option value="" disabled selected>Select District 
                                                     </option>
                                                 </select>
                                                 <div class="invalid-feedback"> Please select district.</div>
@@ -371,26 +372,32 @@
                                                 <span class="input-group-text col-4 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="imageOrientation">Notes<span class="text-danger">
-                                                        *</span></span>
+                                                    id="imageOrientation">Notes</span>
                                                 <textarea class="form-control" id="textareaNotes"></textarea>
                                             </div>
                                         </div>
 
 
+
                                         <!--create user and clear button-->
                                         <div class="row mt-5">
-                                            <div class="col-6 text-start">
+                                            <div class="col-4 text-start">
                                                 <button type="reset" id="buttonClear" value="Clear"
                                                     class="btn btn-secondary"><i class="fa-solid fa-eraser"
                                                         style="color: #ffffff;"></i> Clear</button>
                                             </div>
 
-                                            <div class="col-6 text-start">
+                                            <div class="col-4 text-start">
+                                                <button type="submit" id="buttonSubmit" value=""
+                                                    class="btn btn-warning">
+                                                    <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                                                    Update</button>
+                                            </div>
+                                            <div class="col-4 text-start">
                                                 <button type="submit" id="buttonSubmit" value="Add Employee"
-                                                    class="btn btn-success"><i class="fa-solid fa-user-plus"
-                                                        style="color: #ffffff;"></i> Add</button>
-
+                                                    class="btn btn-success" onclick="buttonEmployeeSubmit()"><i
+                                                        class="fa-solid fa-user-plus" style="color: #ffffff;"></i>
+                                                    Add</button>
                                             </div>
                                         </div>
                                     </form>
@@ -402,7 +409,8 @@
             </div>
         </div>
     </div>
-    <script src="mainjsfile.js"></script>
+    <script src="validationFunc.js"></script>
+    <script src="fillFunc.js"></script>
 </body>
 
 </html>
