--- a/delivery.html
+++ b/delivery.html
@@ -227,7 +227,8 @@
                                     </div>
                                 </div>
 
-                                <form action="" class="needs-validation" novalidate method="post">
+                                <form action="" class="needs-validation" novalidate method="post"
+                                    onsubmit="return false">
 
 
                                     <!--delivery date-->
@@ -237,7 +238,8 @@
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
                                                 id="labelDeliveryDate">Delivery Date</span>
-                                            <input type="date" class="form-control" id="textDeliveryDate" required onkeyup="return false">
+                                            <input type="date" class="form-control" id="textDeliveryDate" required
+                                                onkeyup="return false" onchange="this.classList.add('is-valid');">
                                             <div class="invalid-feedback"> Please select delivery date.</div>
                                         </div>
                                     </div>
@@ -271,7 +273,7 @@
                                                 No<span class="text-danger">
                                                     *</span></span>
                                             <input type="text" class="form-control" id="textWaybillNo"
-                                                placeholder="Type Waybill No..." required>
+                                                placeholder="Type Waybill No..."  onkeyup="this, textElementValidator(this,'^[0-9]{5,10}$')" required>
                                             <div class="invalid-feedback"> Please type waybill number.</div>
                                         </div>
                                     </div>
@@ -330,31 +332,34 @@
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="imageOrientation">Notes<span class="text-danger">
-                                                    *</span></span>
+                                                id="imageOrientation">Notes</span>
                                             <textarea class="form-control" id="textareaNotes"></textarea>
 
                                         </div>
                                     </div>
-                          
 
+                                    <!--create user and clear button-->
+                                    <div class="row mt-5">
+                                        <div class="col-4 text-start">
+                                            <button type="reset" id="buttonClear" value="Clear"
+                                                class="btn btn-secondary"><i class="fa-solid fa-eraser"
+                                                    style="color: #ffffff;"></i> Clear</button>
+                                        </div>
 
-                            <!--create user and clear button-->
-                            <div class="row mt-5">
-                                <div class="col-6 text-start">
-                                    <button type="reset" id="buttonClear" value="Clear" class="btn btn-secondary"><i
-                                            class="fa-solid fa-eraser" style="color: #ffffff;"></i>
-                                        Clear</button>
-                                </div>
-
-                                <div class="col-6 text-start">
-                                    <button type="submit" id="buttonSubmit" value="Add Employee"
-                                        class="btn btn-success"><i class="fa-solid fa-user-plus"
-                                            style="color: #ffffff;"></i> Add</button>
-
-                                </div>
+                                        <div class="col-4 text-start">
+                                            <button type="submit" id="buttonSubmit" value="" class="btn btn-warning">
+                                                <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                                                Update</button>
+                                        </div>
+                                        <div class="col-4 text-start">
+                                            <button type="submit" id="buttonSubmit" value="Add Employee"
+                                                class="btn btn-success" onclick="buttonEmployeeSubmit()"><i
+                                                    class="fa-solid fa-user-plus" style="color: #ffffff;"></i>
+                                                Add</button>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
-                            </form>
                         </div>
                     </div>
                 </div>
@@ -362,8 +367,8 @@
         </div>
     </div>
     </div>
-    </div>
-    <script src="mainjsfile.js"></script>
+    <script src="validationFunc.js"></script>
+    <script src="fillFunc.js"></script>
     <script src="delivery.js"></script>
 </body>
 
