--- a/employee.html
+++ b/employee.html
@@ -210,7 +210,7 @@
                                     </div>
                                 </div>
 
-                                <form action="" class="needs-validation" novalidate method="post">
+                                <form action="" class="needs-validation" novalidate method="post" onsubmit="return false">
 
                                     <!--full name-->
                                     <div class="row">
@@ -269,7 +269,7 @@
                                                 style="background-color:#343a40; color: #ffffff;"
                                                 id="labelGender">Gender<span class="text-danger"> *</span></span>
                                             <div class="form-check form-check-inline m-2">
-                                                <input class="form-check-input" type="radio" name="radioGender"
+                                                <input class="form-check-input" type="radio" name="radioGender" 
                                                     id="radioMale" value="single">
                                                 <label class="form-check-label" for="radioMale">Male</label>
                                             </div>
@@ -290,7 +290,8 @@
                                                 style="background-color:#343a40; color: #ffffff;"
                                                 id="labelDob">Birthday<span class="text-danger"> *</span></span>
                                             <input type="date" class="form-control" id="textDob"
-                                                onkeydown="return false">
+                                                onkeydown="return false" onchange="this.classList.add('is-valid');
+                                                ">
                                             <div class="invalid-feedback">
                                                 Please select birthday.
                                             </div>
@@ -361,10 +362,9 @@
                                             <span class="input-group-text col-3 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;" id="labelLandNo">Land
-                                                No<span class="text-danger">
-                                                    *</span></span>
+                                                No</span>
                                             <input type="text" class="form-control"
-                                                placeholder="Type 10-digit land number..." id="textLandNo" required
+                                                placeholder="Type 10-digit land number..." id="textLandNo"
                                                 autocomplete="off" max="10"
                                                 onkeyup="this, textElementValidator(this,'^[0][^0][0-9]{8}$')">
                                             <div class="invalid-feedback">
@@ -394,7 +394,6 @@
                                             </div>
                                             <div class="invalid-feedback">Please select Civil Status</div>
                                         </div>
-
                                     </div>
 
                                     <!-- designation -->
@@ -405,9 +404,8 @@
                                                 style="background-color:#343a40; color: #ffffff;" id="labelDesignation"
                                                 required>Designation<span class="text-danger">
                                                     *</span></span>
-                                            <select id="selectDesignation" class="form-select mt-3">
-                                                <option value="" disabled selected>Select Designation
-                                                </option>
+                                            <select id="selectDesignation" class="form-select mt-3" onchange="console.log(JSON.parse(this.value));
+                                            ">
                                             </select>
                                             <div class="invalid-feedback"> Please select designation.</div>
                                         </div>
@@ -419,11 +417,10 @@
                                             <span class="input-group-text col-3 fw-bold mt-3"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="selectStatus">Status<span class="text-danger">
+                                                id="labelSelectStatus">Status<span class="text-danger">
                                                     *</span></span>
-                                            <select id="selectStatus" class="form-select mt-3">
-                                                <option value="" disabled selected>Select Status
-                                                </option>
+                                            <select id="selectStatus" class="form-select mt-3"
+                                                onchange="console.log(JSON.parse(this.value));   this.classList.add('is-valid'); ">
                                             </select>
                                             <div class="invalid-feedback"> Please select status.</div>
                                         </div>
@@ -444,15 +441,20 @@
 
                                     <!--create user and clear button-->
                                     <div class="row mt-5">
-                                        <div class="col-6 text-start">
+                                        <div class="col-4 text-start">
                                             <button type="reset" id="buttonClear" value="Clear"
                                                 class="btn btn-secondary"><i class="fa-solid fa-eraser"
                                                     style="color: #ffffff;"></i> Clear</button>
                                         </div>
 
-                                        <div class="col-6 text-start">
+                                        <div class="col-4 text-start">
+                                            <button type="submit" id="buttonSubmit" value="" class="btn btn-warning">
+                                                    <i class="fa-solid fa-pen-to-square" style="color: #ffffff;" ></i>
+                                                Update</button>
+                                        </div>
+                                        <div class="col-4 text-start">
                                             <button type="submit" id="buttonSubmit" value="Add Employee"
-                                                class="btn btn-success"><i class="fa-solid fa-user-plus"
+                                                class="btn btn-success" onclick="buttonEmployeeSubmit()"><i class="fa-solid fa-user-plus"
                                                     style="color: #ffffff;"></i> Add</button>
                                         </div>
                                     </div>
@@ -466,7 +468,8 @@
         </div>
         </div>
         </div>
-        <script src="mainjsfile.js"></script>
+        <script src="validationFunc.js"></script>
+        <script src="fillFunc.js"></script>
         <script src="employee.js"></script>
 </body>
 
