--- a/grn.html
+++ b/grn.html
@@ -273,7 +273,8 @@
                                             </div>
                                         </div>
 
-                                        <form action="" class="needs-validation" novalidate method="post">
+                                        <form action="" class="needs-validation" novalidate method="post"
+                                            onsubmit="return false">
 
 
                                             <!-- Total bill -->
@@ -331,7 +332,8 @@
                                                         id="labelReceivedDate">Received Date<span class="text-danger">
                                                             *</span></span>
                                                     <input type="date" class="form-control" id="textReceivedDate">
-                                                    <div class="invalid-feedback" onkeydown="return false"> Please
+                                                    <div class="invalid-feedback" onkeydown="return false" onchange="this.classList.add('is-valid');
+                                                "> Please
                                                         select received date.</div>
                                                 </div>
                                             </div>
@@ -369,8 +371,7 @@
                                                     <span class="input-group-text col-4 fw-bold"
                                                         onClick=this.parentNode.children[1].focus();
                                                         style="background-color:#343a40; color: #ffffff;"
-                                                        id="imageOrientation">Notes<span class="text-danger">
-                                                            *</span></span>
+                                                        id="imageOrientation">Notes</span>
                                                     <textarea class="form-control" id="textareaNotes"></textarea>
 
                                                 </div>
@@ -379,18 +380,24 @@
 
                                             <!--create user and clear button-->
                                             <div class="row mt-5">
-                                                <div class="col-6 text-start">
+                                                <div class="col-4 text-start">
                                                     <button type="reset" id="buttonClear" value="Clear"
                                                         class="btn btn-secondary"><i class="fa-solid fa-eraser"
-                                                            style="color: #ffffff;"></i>
-                                                        Clear</button>
+                                                            style="color: #ffffff;"></i> Clear</button>
                                                 </div>
 
-                                                <div class="col-6 text-start">
+                                                <div class="col-4 text-start">
+                                                    <button type="submit" id="buttonSubmit" value=""
+                                                        class="btn btn-warning">
+                                                        <i class="fa-solid fa-pen-to-square"
+                                                            style="color: #ffffff;"></i>
+                                                        Update</button>
+                                                </div>
+                                                <div class="col-4 text-start">
                                                     <button type="submit" id="buttonSubmit" value="Add Employee"
-                                                        class="btn btn-success"><i class="fa-solid fa-user-plus"
-                                                            style="color: #ffffff;"></i> Add</button>
-
+                                                        class="btn btn-success" onclick="buttonEmployeeSubmit()"><i
+                                                            class="fa-solid fa-user-plus" style="color: #ffffff;"></i>
+                                                        Add</button>
                                                 </div>
                                             </div>
                                         </form>
@@ -465,6 +472,28 @@
                                             </div>
                                         </div>
 
+                                        <!--create user and clear button-->
+                                        <div class="row mt-5">
+                                            <div class="col-4 text-start">
+                                                <button type="reset" id="buttonClear" value="Clear"
+                                                    class="btn btn-secondary"><i class="fa-solid fa-eraser"
+                                                        style="color: #ffffff;"></i> Clear</button>
+                                            </div>
+
+                                            <div class="col-4 text-start">
+                                                <button type="submit" id="buttonSubmit" value=""
+                                                    class="btn btn-warning">
+                                                    <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                                                    Update</button>
+                                            </div>
+                                            <div class="col-4 text-start">
+                                                <button type="submit" id="buttonSubmit" value="Add Employee"
+                                                    class="btn btn-success" onclick="buttonEmployeeSubmit()"><i
+                                                        class="fa-solid fa-user-plus" style="color: #ffffff;"></i>
+                                                    Add</button>
+                                            </div>
+                                        </div>
+
                             </form>
                             <div class="row mt-3">
                                 <table id="tableProductionMaterial" class="table table-striped table-hover ">
@@ -490,7 +519,8 @@
         </div>
     </div>
 
-    <script src="mainjsfile.js"></script>
+    <script src="validationFunc.js"></script>
+    <script src="fillFunc.js"></script>
 </body>
 
 </html>
