--- a/material management.html
+++ b/material management.html
@@ -218,7 +218,8 @@
                                     </div>
                                 </div>
 
-                                <form action="" class="needs-validation" novalidate method="post">
+                                <form action="" class="needs-validation" novalidate method="post"
+                                    onsubmit="return false">
 
 
                                     <!--name filed-->
@@ -348,8 +349,7 @@
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="imageOrientation">Notes<span class="text-danger">
-                                                    *</span></span>
+                                                id="imageOrientation">Notes</span>
                                             <textarea class="form-control" id="textareaNotes"></textarea>
                                         </div>
                                     </div>
@@ -357,18 +357,21 @@
 
                                     <!--create user and clear button-->
                                     <div class="row mt-5">
-                                        <div class="col-6 text-start">
-                                            <button type="reset" id="submit" value="buttonClear"
+                                        <div class="col-4 text-start">
+                                            <button type="reset" id="buttonClear" value="Clear"
                                                 class="btn btn-secondary"><i class="fa-solid fa-eraser"
-                                                    style="color: #ffffff;"></i>
-                                                Clear</button>
+                                                    style="color: #ffffff;"></i> Clear</button>
                                         </div>
 
-                                        <div class="col-6 text-start">
+                                        <div class="col-4 text-start">
+                                            <button type="submit" id="buttonSubmit" value="" class="btn btn-warning">
+                                                    <i class="fa-solid fa-pen-to-square" style="color: #ffffff;" ></i>
+                                                Update</button>
+                                        </div>
+                                        <div class="col-4 text-start">
                                             <button type="submit" id="buttonSubmit" value="Add Employee"
-                                                class="btn btn-success"><i class="fa-solid fa-user-plus"
+                                                class="btn btn-success" onclick="buttonEmployeeSubmit()"><i class="fa-solid fa-user-plus"
                                                     style="color: #ffffff;"></i> Add</button>
-
                                         </div>
                                     </div>
                                 </form>
@@ -380,7 +383,7 @@
             </div>
         </div>
     </div>
-    <script src="mainjsfile.js"></script>
-</body>
+    <script src="validationFunc.js"></script>
+    <script src="fillFunc.js"></script>
 
 </html>
