--- a/product management.html
+++ b/product management.html
@@ -251,10 +251,10 @@
             <div class="modal-dialog modal-fullscreen">
                 <div class="modal-content" style="background-color:  #343a40;">
                     <div class="modal-header">
-                       
+
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                      </div>
-                      <div class="modal-body">
+                    </div>
+                    <div class="modal-body">
                         <div class="row">
 
                             <div class="col-6">
@@ -268,7 +268,8 @@
                                             </div>
                                         </div>
 
-                                        <form action="" class="needs-validation" novalidate method="post">
+                                        <form action="" class="needs-validation" novalidate method="post"
+                                            onsubmit="return false">
 
                                             <!--design id -->
                                             <div class="row mt-3">
@@ -496,8 +497,7 @@
                                                     <span class="input-group-text col-4 fw-bold"
                                                         onClick=this.parentNode.children[1].focus();
                                                         style="background-color:#343a40; color: #ffffff;"
-                                                        id="imageOrientation">Notes<span class="text-danger">
-                                                            *</span></span>
+                                                        id="imageOrientation">Notes</span>
                                                     <div class="form-floating">
                                                         <textarea class="form-control" id="textareaNotes"></textarea>
                                                     </div>
@@ -507,16 +507,24 @@
 
                                             <!--create user and clear button-->
                                             <div class="row mt-5">
-                                                <div class="col-6 text-start">
+                                                <div class="col-4 text-start">
                                                     <button type="reset" id="buttonClear" value="Clear"
                                                         class="btn btn-secondary"><i class="fa-solid fa-eraser"
                                                             style="color: #ffffff;"></i> Clear</button>
                                                 </div>
-                                                <div class="col-6 text-start">
-                                                    <button type="submit" id="buttonSubmit" value="Add Employee"
-                                                        class="btn btn-success"><i class="fa-solid fa-user-plus"
-                                                            style="color: #ffffff;"></i> Add</button>
 
+                                                <div class="col-4 text-start">
+                                                    <button type="submit" id="buttonSubmit" value=""
+                                                        class="btn btn-warning">
+                                                        <i class="fa-solid fa-pen-to-square"
+                                                            style="color: #ffffff;"></i>
+                                                        Update</button>
+                                                </div>
+                                                <div class="col-4 text-start">
+                                                    <button type="submit" id="buttonSubmit" value="Add Employee"
+                                                        class="btn btn-success" onclick="buttonEmployeeSubmit()"><i
+                                                            class="fa-solid fa-user-plus" style="color: #ffffff;"></i>
+                                                        Add</button>
                                                 </div>
                                             </div>
                                         </form>
@@ -589,6 +597,28 @@
                                                     <div class="invalid-feedback"> Please type correct line total.</div>
                                                 </div>
                                             </div>
+                                            <!--create user and clear button-->
+                                            <div class="row mt-5">
+                                                <div class="col-4 text-start">
+                                                    <button type="reset" id="buttonClear" value="Clear"
+                                                        class="btn btn-secondary"><i class="fa-solid fa-eraser"
+                                                            style="color: #ffffff;"></i> Clear</button>
+                                                </div>
+
+                                                <div class="col-4 text-start">
+                                                    <button type="submit" id="buttonSubmit" value=""
+                                                        class="btn btn-warning">
+                                                        <i class="fa-solid fa-pen-to-square"
+                                                            style="color: #ffffff;"></i>
+                                                        Update</button>
+                                                </div>
+                                                <div class="col-4 text-start">
+                                                    <button type="submit" id="buttonSubmit" value="Add Employee"
+                                                        class="btn btn-success" onclick="buttonEmployeeSubmit()"><i
+                                                            class="fa-solid fa-user-plus" style="color: #ffffff;"></i>
+                                                        Add</button>
+                                                </div>
+                                            </div>
 
                                 </form>
                                 <div class="row mt-3">
@@ -610,8 +640,15 @@
                                 </div>
 
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-                            <script src="mainjsfile.js"></script>
+    <script src="validationFunc.js"></script>
+    <script src="fillFunc.js"></script>
 </body>
 
 </html>
