--- a/production order management.html
+++ b/production order management.html
@@ -191,23 +191,24 @@
 
 
         <!--FORM SECTION-->
-        <!-- Modal -->
-        <div class="modal fade" id="fullscreenModal" tabindex="-1" aria-labelledby="fullscreenModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog modal-fullscreen">
-                <div class="modal-content" style="background-color: #808284;">
-                    <div class="modal-header">
+       <!-- Modal -->
+    <div class="modal fade" id="fullscreenModal" tabindex="-1" aria-labelledby="fullscreenModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-fullscreen">
+        <div class="modal-content" style="background-color:  #343a40;">
+            <div class="modal-header">
 
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="row">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
 
-                            <div class="col-6">
-                                <div class="card">
-                                    <img src="../images/bg.png" class="card-img" alt="Background Image">
-                                    <div class="card-img-overlay d-flex align-items-center justify-content-center">
-                                        <div class="card-body">
+                    <div class="col-6">
+                        <div class="card">
+                            <img src="../images/bg.png" class="card-img" alt="Background Image">
+                            <div class="card-img-overlay d-flex align-items-center justify-content-center">
+                                <div class="card-body scrollable-card">
+
 
                                             <!--required mark-->
                                             <div class="row">
@@ -216,7 +217,8 @@
                                                 </div>
                                             </div>
 
-                                            <form action="">
+                                            <form action="" class="needs-validation" novalidate method="post"
+                                                onsubmit="return false">
 
 
                                                 <!--required date filed-->
@@ -227,7 +229,8 @@
                                                             style="background-color:#343a40; color: #ffffff;"
                                                             id="labelRequiredDate">Required Date</span>
                                                         <input type="date" class="form-control" id="textRequiredDate"
-                                                            required onkeydown="return false">
+                                                            required onkeydown="return false" onchange="this.classList.add('is-valid');
+                                                            ">
                                                         <div class="invalid-feedback"> Please select required date.
                                                         </div>
                                                     </div>
@@ -295,8 +298,7 @@
                                                         <span class="input-group-text col-4 fw-bold"
                                                             onClick=this.parentNode.children[1].focus();
                                                             style="background-color:#343a40; color: #ffffff;"
-                                                            id="imageOrientation">Notes<span class="text-danger">
-                                                                *</span></span>
+                                                            id="imageOrientation">Notes</span>
                                                         <textarea class="form-control" id="textareaNotes"></textarea>
                                                     </div>
                                                 </div>
@@ -360,6 +362,29 @@
                                                 </div>
                                             </div>
 
+                                            <!--create user and clear button-->
+                                            <div class="row mt-5">
+                                                <div class="col-4 text-start">
+                                                    <button type="reset" id="buttonClear" value="Clear"
+                                                        class="btn btn-secondary"><i class="fa-solid fa-eraser"
+                                                            style="color: #ffffff;"></i> Clear</button>
+                                                </div>
+
+                                                <div class="col-4 text-start">
+                                                    <button type="submit" id="buttonSubmit" value=""
+                                                        class="btn btn-warning">
+                                                        <i class="fa-solid fa-pen-to-square"
+                                                            style="color: #ffffff;"></i>
+                                                        Update</button>
+                                                </div>
+                                                <div class="col-4 text-start">
+                                                    <button type="submit" id="buttonSubmit" value="Add Employee"
+                                                        class="btn btn-success" onclick="buttonEmployeeSubmit()"><i
+                                                            class="fa-solid fa-user-plus" style="color: #ffffff;"></i>
+                                                        Add</button>
+                                                </div>
+                                            </div>
+
                                 </form>
                                 <div class="row mt-3">
                                     <table id="tableProductionOrder" class="table table-striped table-hover ">
@@ -382,7 +407,8 @@
             </div>
         </div>
     </div>
-    <script src="mainjsfile.js"></script>
+    <script src="validationFunc.js"></script>
+    <script src="fillFunc.js"></script>
 </body>
 
 </html>
