--- a/purchase request.html
+++ b/purchase request.html
@@ -273,7 +273,7 @@
                                             </div>
                                         </div>
 
-                                        <form action="" class="needs-validation" novalidate method="post">
+                                        <form action="" class="needs-validation" novalidate method="post" onsubmit="return false">
 
                                             <!--supplier id filed-->
                                             <div class="row mt-3">
@@ -352,29 +352,31 @@
                                                     <span class="input-group-text col-4 fw-bold"
                                                         onClick=this.parentNode.children[1].focus();
                                                         style="background-color:#343a40; color: #ffffff;"
-                                                        id="imageOrientation">Notes<span class="text-danger">
-                                                            *</span></span>
+                                                        id="imageOrientation">Notes</span>
                                                     <textarea class="form-control" id="textareaNotes"></textarea>
                                                 </div>
                                             </div>
 
 
-                                            <!--create user and clear button-->
-                                            <div class="row mt-5">
-                                                <div class="col-6 text-start">
-                                                    <button type="reset" id="submit" value="buttonClear"
-                                                        class="btn btn-secondary"><i class="fa-solid fa-eraser"
-                                                            style="color: #ffffff;"></i>
-                                                        Clear</button>
-                                                </div>
+                                          <!--create user and clear button-->
+                                    <div class="row mt-5">
+                                        <div class="col-4 text-start">
+                                            <button type="reset" id="buttonClear" value="Clear"
+                                                class="btn btn-secondary"><i class="fa-solid fa-eraser"
+                                                    style="color: #ffffff;"></i> Clear</button>
+                                        </div>
 
-                                                <div class="col-6 text-start">
-                                                    <button type="submit" id="buttonSubmit" value="Add Employee"
-                                                        class="btn btn-success"><i class="fa-solid fa-user-plus"
-                                                            style="color: #ffffff;"></i> Add</button>
-
-                                                </div>
-                                            </div>
+                                        <div class="col-4 text-start">
+                                            <button type="submit" id="buttonSubmit" value="" class="btn btn-warning">
+                                                    <i class="fa-solid fa-pen-to-square" style="color: #ffffff;" ></i>
+                                                Update</button>
+                                        </div>
+                                        <div class="col-4 text-start">
+                                            <button type="submit" id="buttonSubmit" value="Add Employee"
+                                                class="btn btn-success" onclick="buttonEmployeeSubmit()"><i class="fa-solid fa-user-plus"
+                                                    style="color: #ffffff;"></i> Add</button>
+                                        </div>
+                                    </div>
                                         </form>
                                     </div>
                                 </div>
@@ -445,6 +447,26 @@
                                                 <div class="invalid-feedback"> Please type correct line total.</div>
                                             </div>
                                         </div>
+                                        
+                                         <!--create user and clear button-->
+                                    <div class="row mt-5">
+                                        <div class="col-4 text-start">
+                                            <button type="reset" id="buttonClear" value="Clear"
+                                                class="btn btn-secondary"><i class="fa-solid fa-eraser"
+                                                    style="color: #ffffff;"></i> Clear</button>
+                                        </div>
+
+                                        <div class="col-4 text-start">
+                                            <button type="submit" id="buttonSubmit" value="" class="btn btn-warning">
+                                                    <i class="fa-solid fa-pen-to-square" style="color: #ffffff;" ></i>
+                                                Update</button>
+                                        </div>
+                                        <div class="col-4 text-start">
+                                            <button type="submit" id="buttonSubmit" value="Add Employee"
+                                                class="btn btn-success" onclick="buttonEmployeeSubmit()"><i class="fa-solid fa-user-plus"
+                                                    style="color: #ffffff;"></i> Add</button>
+                                        </div>
+                                    </div>
 
                             </form>
                             <div class="row mt-3">
@@ -470,7 +492,8 @@
                 </div>
             </div>
         </div>
-        <script src="mainjsfile.js"></script>
+        <script src="validationFunc.js"></script>
+        <script src="fillFunc.js"></script>
 </body>
 
 </html>
