--- a/supplier payment.html
+++ b/supplier payment.html
@@ -273,108 +273,117 @@
                                             </div>
                                         </div>
 
-                                        <form action="" class="needs-validation" novalidate method="post"></form>
+                                        <form action="" class="needs-validation" novalidate method="post"
+                                            onsubmit="return false">
 
 
-                                        <!-- Total due amount -->
-                                        <div class="row mt-3">
-                                            <div class="input-group">
-                                                <span class="input-group-text col-4 fw-bold"
-                                                    onClick=this.parentNode.children[1].focus();
-                                                    style="background-color:#343a40; color: #ffffff;" id="category">
-                                                    Due amount<span class="text-danger">
-                                                        *</span></span>
-                                                <input type="text" class="form-control" placeholder="" required>
-                                            </div>
-                                        </div>
-
-                                        <!-- paid amount -->
-                                        <div class="row mt-3">
-                                            <div class="input-group">
-                                                <span class="input-group-text col-4 fw-bold"
-                                                    onClick=this.parentNode.children[1].focus();
-                                                    style="background-color:#343a40; color: #ffffff;"
-                                                    id="labelPaidAmount">Paid
-                                                    amount<span class="text-danger">
-                                                        *</span></span>
-                                                <input type="text" class="form-control"
-                                                    placeholder="Type Paid Amount..." required>
-                                            </div>
-                                        </div>
-
-
-                                        <!-- balance amount -->
-                                        <div class="row mt-3">
-                                            <div class="input-group">
-                                                <span class="input-group-text col-4 fw-bold"
-                                                    onClick=this.parentNode.children[1].focus();
-                                                    style="background-color:#343a40; color: #ffffff;"
-                                                    id="category">Balance
-                                                    Amount
-                                                    <span class="text-danger">
-                                                        *</span></span>
-                                                <input type="text" class="form-control" id="textBalanceAmount" required>
-                                            </div>
-                                        </div>
-
-
-                                        <!--payment method-->
-                                        <div class="row mt-3">
-                                            <div class="input-group">
-                                                <span class="input-group-text col-4 fw-bold"
-                                                    onClick=this.parentNode.children[1].focus();
-                                                    style="background-color:#343a40; color: #ffffff;"
-                                                    id="labelPaymentMethod">Payment
-                                                    Method<span class="text-danger">
-                                                        *</span></span>
-                                                <select class="form-select" id="textPaymentMethod" required>
-                                                </select>
-                                            </div>
-                                        </div>
-
-
-                                        <!-- stauts radiobutton-->
-                                        <div class="row mt-3">
-                                            <div class="input-group">
-                                                <span class="input-group-text col-4 fw-bold"
-                                                    onClick=this.parentNode.children[1].focus();
-                                                    style="background-color:#343a40; color: #ffffff;"
-                                                    id="labelStatus">Status<span class="text-danger">
-                                                        *</span></span>
-
-                                                <div class="form-check">
-                                                    <input class="form-check-input m-2" type="radio" name="radioStatus"
-                                                        id="radioPending" checked>
-                                                    <label class="form-check-label" for="radioPending">
-                                                        Pending
-                                                    </label>
-                                                </div>
-                                                <div class="form-check">
-                                                    <input class="form-check-input m-2" type="radio" name="radioStatus"
-                                                        id="radioComplete">
-                                                    <label class="form-check-label" for="radioComplete">
-                                                        Completed
-                                                    </label>
+                                            <!-- Total due amount -->
+                                            <div class="row mt-3">
+                                                <div class="input-group">
+                                                    <span class="input-group-text col-4 fw-bold"
+                                                        onClick=this.parentNode.children[1].focus();
+                                                        style="background-color:#343a40; color: #ffffff;" id="category">
+                                                        Due amount<span class="text-danger">
+                                                            *</span></span>
+                                                    <input type="text" class="form-control" placeholder="" required>
                                                 </div>
                                             </div>
-                                        </div>
 
-
-                                        <!--create user and clear button-->
-                                        <div class="row mt-5">
-                                            <div class="col-6 text-start">
-                                                <button type="reset" id="buttonClear" value="Clear"
-                                                    class="btn btn-secondary"><i class="fa-solid fa-eraser"
-                                                        style="color: #ffffff;"></i>
-                                                    Clear</button>
+                                            <!-- paid amount -->
+                                            <div class="row mt-3">
+                                                <div class="input-group">
+                                                    <span class="input-group-text col-4 fw-bold"
+                                                        onClick=this.parentNode.children[1].focus();
+                                                        style="background-color:#343a40; color: #ffffff;"
+                                                        id="labelPaidAmount">Paid
+                                                        amount<span class="text-danger">
+                                                            *</span></span>
+                                                    <input type="text" class="form-control"
+                                                        placeholder="Type Paid Amount..." required>
+                                                </div>
                                             </div>
 
-                                            <div class="col-6 text-start">
-                                                <button type="submit" id="buttonSubmit" value="Add Employee"
-                                                    class="btn btn-success"><i class="fa-solid fa-user-plus"
-                                                        style="color: #ffffff;"></i> Add</button>
+
+                                            <!-- balance amount -->
+                                            <div class="row mt-3">
+                                                <div class="input-group">
+                                                    <span class="input-group-text col-4 fw-bold"
+                                                        onClick=this.parentNode.children[1].focus();
+                                                        style="background-color:#343a40; color: #ffffff;"
+                                                        id="category">Balance
+                                                        Amount
+                                                        <span class="text-danger">
+                                                            *</span></span>
+                                                    <input type="text" class="form-control" id="textBalanceAmount"
+                                                        required>
+                                                </div>
                                             </div>
-                                        </div>
+
+
+                                            <!--payment method-->
+                                            <div class="row mt-3">
+                                                <div class="input-group">
+                                                    <span class="input-group-text col-4 fw-bold"
+                                                        onClick=this.parentNode.children[1].focus();
+                                                        style="background-color:#343a40; color: #ffffff;"
+                                                        id="labelPaymentMethod">Payment
+                                                        Method<span class="text-danger">
+                                                            *</span></span>
+                                                    <select class="form-select" id="textPaymentMethod" required>
+                                                    </select>
+                                                </div>
+                                            </div>
+
+
+                                            <!-- stauts radiobutton-->
+                                            <div class="row mt-3">
+                                                <div class="input-group">
+                                                    <span class="input-group-text col-4 fw-bold"
+                                                        onClick=this.parentNode.children[1].focus();
+                                                        style="background-color:#343a40; color: #ffffff;"
+                                                        id="labelStatus">Status<span class="text-danger">
+                                                            *</span></span>
+
+                                                    <div class="form-check">
+                                                        <input class="form-check-input m-2" type="radio"
+                                                            name="radioStatus" id="radioPending" checked>
+                                                        <label class="form-check-label" for="radioPending">
+                                                            Pending
+                                                        </label>
+                                                    </div>
+                                                    <div class="form-check">
+                                                        <input class="form-check-input m-2" type="radio"
+                                                            name="radioStatus" id="radioComplete">
+                                                        <label class="form-check-label" for="radioComplete">
+                                                            Completed
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
+                                            <!--create user and clear button-->
+                                            <div class="row mt-5">
+                                                <div class="col-4 text-start">
+                                                    <button type="reset" id="buttonClear" value="Clear"
+                                                        class="btn btn-secondary"><i class="fa-solid fa-eraser"
+                                                            style="color: #ffffff;"></i> Clear</button>
+                                                </div>
+
+                                                <div class="col-4 text-start">
+                                                    <button type="submit" id="buttonSubmit" value=""
+                                                        class="btn btn-warning">
+                                                        <i class="fa-solid fa-pen-to-square"
+                                                            style="color: #ffffff;"></i>
+                                                        Update</button>
+                                                </div>
+                                                <div class="col-4 text-start">
+                                                    <button type="submit" id="buttonSubmit" value="Add Employee"
+                                                        class="btn btn-success" onclick="buttonEmployeeSubmit()"><i
+                                                            class="fa-solid fa-user-plus" style="color: #ffffff;"></i>
+                                                        Add</button>
+                                                </div>
+                                            </div>
                                         </form>
                                     </div>
                                 </div>
@@ -426,6 +435,28 @@
                                                 <div class="invalid-feedback"> Please type correct amount.</div>
                                             </div>
                                         </div>
+
+                                        <!--create user and clear button-->
+                                        <div class="row mt-5">
+                                            <div class="col-4 text-start">
+                                                <button type="reset" id="buttonClear" value="Clear"
+                                                    class="btn btn-secondary"><i class="fa-solid fa-eraser"
+                                                        style="color: #ffffff;"></i> Clear</button>
+                                            </div>
+
+                                            <div class="col-4 text-start">
+                                                <button type="submit" id="buttonSubmit" value=""
+                                                    class="btn btn-warning">
+                                                    <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                                                    Update</button>
+                                            </div>
+                                            <div class="col-4 text-start">
+                                                <button type="submit" id="buttonSubmit" value="Add Employee"
+                                                    class="btn btn-success" onclick="buttonEmployeeSubmit()"><i
+                                                        class="fa-solid fa-user-plus" style="color: #ffffff;"></i>
+                                                    Add</button>
+                                            </div>
+                                        </div>
                             </form>
                             <div class="row mt-3">
                                 <table id="innertableSupplierPayment" class="table table-striped table-hover ">
@@ -449,7 +480,8 @@
                 </div>
             </div>
         </div>
-        <script src="mainjsfile.js"></script>
+        <script src="validationFunc.js"></script>
+        <script src="fillFunc.js"></script>
 </body>
 
 </html>
